--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body class="body">
-    <header class="header"></header>
+    <header class="header">
+      <a href="#">
+        <img class="header__logo" src="./images/logo.svg" alt="logo" />
+      </a>
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
     <script src="./index.js"></script>
