feat: add profile section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
         <img class="header__logo" src="./images/logo.svg" alt="logo" />
       </a>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <section class="profile">
+        <img
+          class="profile__image"
+          src="./images/profile-pic.jpg"
+          alt="Jacques Cousteau"
+        />
+        <div class="profile__info">
+          <p class="profile__name">Jacques Cousteau</p>
+          <p class="profile__about">Explorer</p>
+          <button class="profile__edit-btn">
+            <img
+              class="profile__edit-btn-icon"
+              src="./images/edit-icon.svg"
+              alt="edit button icon"
+            />
+          </button>
+        </div>
+        <button class="profile__add-btn">
+          <img
+            class="profile__btn-icon"
+            src="./images/add-btn.png"
+            alt="add button"
+          />
+        </button>
+      </section>
+    </main>
     <footer class="footer"></footer>
     <script src="./index.js"></script>
   </body>
