--- a/index.html
+++ b/index.html
@@ -38,6 +38,100 @@
           />
         </button>
       </section>
+      <section class="elements">
+        <ul class="elements__list">
+          <li class="element">
+            <img
+              src="./images/yosemite.jpg"
+              alt="yosemite photo"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Yosemite Valley</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+          <li class="element">
+            <img
+              src="./images/lake-louise.jpg"
+              alt="Lake Louise photo"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Lake Louise</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+          <li class="element">
+            <img
+              src="./images/bald-mountains.jpg"
+              alt="Bald Mountains photo"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Bald Mountains</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+          <li class="element">
+            <img
+              src="./images/latemar.jpg"
+              alt="Latemar photo"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Latemar</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+          <li class="element">
+            <img
+              src="./images/vanoise.jpg"
+              alt="Vanois National Park"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Vanois National...</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+          <li class="element">
+            <img
+              src="./images/lago-di-braies.jpg"
+              alt="Lago di Braies"
+              class="element__image"
+            />
+            <div class="element__info">
+              <h3 class="element__title">Lago di Braies</h3>
+              <img
+                src="./images/heart.svg"
+                alt="heart icon"
+                class="element__like-icon"
+              />
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer"></footer>
     <script src="./index.js"></script>
