--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
         </ul>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <p class="footer__text">© 2020 Around The U.S.</p>
+    </footer>
     <script src="./index.js"></script>
   </body>
 </html>
