feat: add profile edit modal

--- a/index.html
+++ b/index.html
@@ -136,6 +136,35 @@
     <footer class="footer">
       <p class="footer__text">© 2020 Around The U.S.</p>
     </footer>
+    <div class="profile-modal">
+      <div class="profile-modal__content">
+        <form action="#" class="form">
+          <h3 class="profile-modal__title">Edit profile</h3>
+          <label for="name">
+            <input
+              type="text"
+              class="form__input"
+              value="Jacques Cousteau"
+              name="name"
+            />
+          </label>
+          <label for="job">
+            <input
+              type="text"
+              class="form__input"
+              value="Explorer"
+              name="job"
+            />
+          </label>
+          <button type="submit" class="profile-modal__btn">Save</button>
+        </form>
+        <img
+          src="./images/close-icon.svg"
+          alt="close icon"
+          class="profile-modal__close"
+        />
+      </div>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
