--- a/index.html
+++ b/index.html
@@ -22,21 +22,9 @@
         <div class="profile__info">
           <p class="profile__name">Jacques Cousteau</p>
           <p class="profile__about">Explorer</p>
-          <button class="profile__edit-btn">
-            <img
-              class="profile__edit-btn-icon"
-              src="./images/edit-icon.svg"
-              alt="edit button icon"
-            />
-          </button>
+          <button class="profile__edit-btn"></button>
         </div>
-        <button class="profile__add-btn">
-          <img
-            class="profile__btn-icon"
-            src="./images/add-btn.png"
-            alt="add button"
-          />
-        </button>
+        <button class="profile__add-btn"></button>
       </section>
       <section class="elements">
         <ul class="elements__list">
@@ -160,11 +148,7 @@
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
-        <img
-          src="./images/close-icon.svg"
-          alt="close icon"
-          class="popup__close"
-        />
+        <button class="popup__close"></button>
       </div>
     </div>
     <script src="./index.js"></script>
