fix: change element img to background image

--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
       <section class="elements">
         <ul class="elements__list">
           <li class="element">
-            <img
-              src="./images/yosemite.jpg"
-              alt="yosemite photo"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Yosemite Valley</h3>
               <img
@@ -44,11 +41,8 @@
             </div>
           </li>
           <li class="element">
-            <img
-              src="./images/lake-louise.jpg"
-              alt="Lake Louise photo"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Lake Louise</h3>
               <img
@@ -59,11 +53,8 @@
             </div>
           </li>
           <li class="element">
-            <img
-              src="./images/bald-mountains.jpg"
-              alt="Bald Mountains photo"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Bald Mountains</h3>
               <img
@@ -74,11 +65,8 @@
             </div>
           </li>
           <li class="element">
-            <img
-              src="./images/latemar.jpg"
-              alt="Latemar photo"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Latemar</h3>
               <img
@@ -89,11 +77,8 @@
             </div>
           </li>
           <li class="element">
-            <img
-              src="./images/vanoise.jpg"
-              alt="Vanois National Park"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Vanois National...</h3>
               <img
@@ -104,11 +89,8 @@
             </div>
           </li>
           <li class="element">
-            <img
-              src="./images/lago-di-braies.jpg"
-              alt="Lago di Braies"
-              class="element__image"
-            />
+            <div class="element__image">
+            </div>
             <div class="element__info">
               <h3 class="element__title">Lago di Braies</h3>
               <img
