--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
       <section class="elements">
         <ul class="elements__list">
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/yosemite.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Yosemite Valley</h3>
               <img
@@ -41,8 +43,10 @@
             </div>
           </li>
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/lake-louise.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Lake Louise</h3>
               <img
@@ -53,8 +57,10 @@
             </div>
           </li>
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/bald-mountains.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Bald Mountains</h3>
               <img
@@ -65,8 +71,10 @@
             </div>
           </li>
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/latemar.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Latemar</h3>
               <img
@@ -77,8 +85,10 @@
             </div>
           </li>
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/vanoise.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Vanois National...</h3>
               <img
@@ -89,8 +99,10 @@
             </div>
           </li>
           <li class="element">
-            <div class="element__image">
-            </div>
+            <div
+              class="element__image"
+              style="background-image: url('./images/lago-di-braies.jpg');"
+            ></div>
             <div class="element__info">
               <h3 class="element__title">Lago di Braies</h3>
               <img
