fix: convert like img to button

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Yosemite Valley</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
           <li class="element">
@@ -49,11 +45,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Lake Louise</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
           <li class="element">
@@ -63,11 +55,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Bald Mountains</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
           <li class="element">
@@ -77,11 +65,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Latemar</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
           <li class="element">
@@ -91,11 +75,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Vanois National...</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
           <li class="element">
@@ -105,11 +85,7 @@
             ></div>
             <div class="element__info">
               <h3 class="element__title">Lago di Braies</h3>
-              <img
-                src="./images/heart.svg"
-                alt="heart icon"
-                class="element__like-icon"
-              />
+              <button class="element__like-icon"></button>
             </div>
           </li>
         </ul>
