--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <input
               type="text"
               class="form__input form__input_type_place-name"
-              placeholder="Place Name"
+              placeholder="Title"
               name="place-name"
               value=""
             />
@@ -77,7 +77,7 @@
             <input
               type="link"
               class="form__input form__input_type_link"
-              placeholder="Link to Picture"
+              placeholder="Image URL"
               name="link"
               value=""
             />
@@ -97,6 +97,6 @@
         <button class="element__delete-btn"></button>
       </li>
     </template>
-    <script src="./index.js"></script>
+    <script src="./index.js" defer></script>
   </body>
 </html>
