--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     </header>
     <main class="main">
       <section class="profile">
-        <div class="profile__image" style="background-image: url('./images/profile-pic.jpg');"></div>
+        <div
+          class="profile__image"
+          style="background-image: url('./images/profile-pic.jpg');"
+        ></div>
         <div class="profile__info">
           <h1 class="profile__name">Jacques Cousteau</h1>
           <p class="profile__about">Explorer</p>
@@ -80,6 +83,12 @@
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
+        <button class="popup__close"></button>
+      </div>
+    </div>
+    <div class="popup popup_type_image">
+      <div class="popup__image">
+        <h3 class="popup__title">Image</h3>
         <button class="popup__close"></button>
       </div>
     </div>
