--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     </div>
     <div class="popup popup_type_image">
       <div class="popup__image">
-        <h3 class="popup__title">Image</h3>
         <button class="popup__close"></button>
+        <p class="popup__image-title"></p>
       </div>
     </div>
     <template class="card-element">
