--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
       </div>
     </div>
     <div class="popup popup_type_image">
-      <div class="popup__image">
+      <div class="popup__image-container">
         <button class="popup__close"></button>
+        <img class="popup__image">
+      </img>
         <p class="popup__image-title"></p>
       </div>
     </div>
