--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       </div>
     </div>
     <div class="popup popup_type_image">
-      <div class="popup__image-container">
+      <figure class="popup__image-container">
         <button class="popup__close"></button>
         <img class="popup__image">
       </img>
-        <p class="popup__image-title"></p>
-      </div>
+        <figcaption class="popup__image-title"></figcaption>
+    </figure>
     </div>
     <template class="card-element">
       <li class="element">
