feat: add form validations

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         <button class="element__delete-btn"></button>
       </li>
     </template>
+    <script src="./validation.js" defer></script>
     <script src="./index.js" defer></script>
   </body>
 </html>
