feat: add show error function

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               minlength="2"
               maxlength="40"
             />
+            <span class="form__input-error"></span>
           </label>
           <label for="job">
             <input
@@ -61,6 +62,7 @@
               minlength="2"
               maxlength="40"
             />
+            <span class="form__input-error"></span>
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
@@ -83,6 +85,7 @@
               minlength="1"
               maxlength="30"
             />
+            <span class="form__input-error"></span>
           </label>
           <label for="link">
             <input
@@ -94,6 +97,7 @@
               id="link"
               required
             />
+            <span class="form__input-error"></span>
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
