feat: update form styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="popup__container">
         <h3 class="popup__title">Edit profile</h3>
         <form action="#" class="form">
-          <label for="profile-name">
+          <label for="profile-name" class="form__input-label">
             <input
               type="text"
               class="form__input form__input_type_name"
@@ -50,7 +50,7 @@
             />
             <span class="form__input-error" id="profile-name-error"></span>
           </label>
-          <label for="profile-description">
+          <label for="profile-description" class="form__input-label">
             <input
               type="text"
               class="form__input form__input_type_job"
@@ -73,7 +73,7 @@
       <div class="popup__container">
         <h3 class="popup__title">New Place</h3>
         <form action="#" class="form">
-          <label for="place-name">
+          <label for="place-name" class="form__input-label">
             <input
               type="text"
               class="form__input form__input_type_place-name"
@@ -87,7 +87,7 @@
             />
             <span class="form__input-error" id="place-name-error"></span>
           </label>
-          <label for="place-url">
+          <label for="place-url" class="form__input-label">
             <input
               type="url"
               class="form__input form__input_type_link"
