fix: refactor code and fix validation fields

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
               id="profile-description"
               required
               minlength="2"
-              maxlength="40"
+              maxlength="200"
             />
-            <span class="form__input-error" id="profile-description-error"></span>
+            <span
+              class="form__input-error"
+              id="profile-description-error"
+            ></span>
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
