feat: add modules folder

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <button class="element__delete-btn"></button>
       </li>
     </template>
-    <script src="./validation.js" defer></script>
-    <script src="./index.js" defer></script>
+    <script src="./scripts/validation.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
   </body>
 </html>
