--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
         <button class="element__delete-btn"></button>
       </li>
     </template>
-    <script src="./scripts/validation.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/index.js" defer></script>
   </body>
 </html>
