--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="profile__info">
           <h1 class="profile__name">Jacques Cousteau</h1>
           <p class="profile__about">Explorer</p>
-          <button class="profile__edit-btn"></button>
+          <button class="profile__edit-btn" aria-label="Edit Profile"></button>
         </div>
-        <button class="profile__add-btn"></button>
+        <button class="profile__add-btn" aria-label="Add Place"></button>
       </section>
       <section class="elements">
         <ul class="elements__list"></ul>
