--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </footer>
     <div class="popup popup_type_edit">
       <div class="popup__container">
-        <h3 class="popup__title">Edit profile</h3>
+        <h2 class="popup__title">Edit profile</h2>
         <form action="#" class="form">
           <label for="profile-name" class="form__input-label">
             <input
@@ -69,12 +69,12 @@
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
-        <button class="popup__close"></button>
+        <button class="popup__close" aria-label="close popup"></button>
       </div>
     </div>
     <div class="popup popup_type_add-place">
       <div class="popup__container">
-        <h3 class="popup__title">New Place</h3>
+        <h2 class="popup__title">New Place</h2>
         <form action="#" class="form">
           <label for="place-name" class="form__input-label">
             <input
@@ -104,12 +104,12 @@
           </label>
           <button type="submit" class="popup__btn">Save</button>
         </form>
-        <button class="popup__close"></button>
+        <button class="popup__close" aria-label="close popup"></button>
       </div>
     </div>
     <div class="popup popup_type_image">
       <figure class="popup__image-container">
-        <button class="popup__close"></button>
+        <button class="popup__close" aria-label="close popup"></button>
         <img class="popup__image" />
         <figcaption class="popup__image-title"></figcaption>
       </figure>
@@ -118,10 +118,13 @@
       <li class="element">
         <div class="element__image"></div>
         <div class="element__info">
-          <h3 class="element__title"></h3>
-          <button class="element__like-btn_default"></button>
+          <h2 class="element__title"></h2>
+          <button
+            class="element__like-btn_default"
+            aria-label="like button"
+          ></button>
         </div>
-        <button class="element__delete-btn"></button>
+        <button class="element__delete-btn" aria-label="delete button"></button>
       </li>
     </template>
     <script type="module" src="./scripts/index.js" defer></script>
