add required components

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around The U.S.</title>
-    <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body class="body">
     <header class="header">
@@ -16,7 +15,7 @@
       <section class="profile">
         <div
           class="profile__image"
-          style="background-image: url('./images/profile-pic.jpg');"
+          style="background-image: url('./src/images/profile-pic.jpg');"
         ></div>
         <div class="profile__info">
           <h1 class="profile__name">Jacques Cousteau</h1>
@@ -127,6 +126,5 @@
         <button class="element__delete-btn" aria-label="delete button"></button>
       </li>
     </template>
-    <script type="module" src="./scripts/index.js" defer></script>
   </body>
 </html>
